--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ env:
 
 jobs:
   windows-build:
+    timeout-minutes: 15
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1
@@ -40,60 +41,10 @@ jobs:
         & .\git-sdk-64-minimal\usr\bin\bash.exe -lc @"
         printf '%s\n' /git-sdk-64-minimal/ >>.git/info/exclude
 
-          ci/make-test-artifacts.sh artifacts
+          ci/run-build-and-tests.sh
         "@
-    - name: upload build artifacts
-      uses: actions/upload-artifact@v1
-      with:
-        name: windows-artifacts
-        path: artifacts
-    - name: upload git-sdk-64-minimal
-      uses: actions/upload-artifact@v1
-      with:
-        name: git-sdk-64-minimal
-        path: git-sdk-64-minimal
-  windows-test:
-    runs-on: windows-latest
-    needs: [windows-build]
-    strategy:
-      matrix:
-        nr: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
-    steps:
-    - uses: actions/checkout@v1
-    - name: download build artifacts
-      uses: actions/download-artifact@v1
-      with:
-        name: windows-artifacts
-        path: ${{github.workspace}}
-    - name: extract build artifacts
-      shell: bash
-      run: tar xf artifacts.tar.gz
-    - name: download git-sdk-64-minimal
-      uses: actions/download-artifact@v1
-      with:
-        name: git-sdk-64-minimal
-        path: ${{github.workspace}}/git-sdk-64-minimal/
-    - name: test
-      shell: powershell
-      run: |
-        & .\git-sdk-64-minimal\usr\bin\bash.exe -lc @"
-          # Let Git ignore the SDK
-          printf '%s\n' /git-sdk-64-minimal/ >>.git/info/exclude
-
-          ci/run-test-slice.sh ${{matrix.nr}} 10
-        "@
-    - name: ci/print-test-failures.sh
-      if: failure()
-      shell: powershell
-      run: |
-        & .\git-sdk-64-minimal\usr\bin\bash.exe -lc ci/print-test-failures.sh
-    - name: Upload failed tests' directories
-      if: failure() && env.FAILED_TEST_ARTIFACTS != ''
-      uses: actions/upload-artifact@v1
-      with:
-        name: failed-tests-windows
-        path: ${{env.FAILED_TEST_ARTIFACTS}}
   vs-build:
+    timeout-minutes: 15
     env:
       MSYSTEM: MINGW64
       NO_PERL: 1
@@ -150,71 +101,18 @@ jobs:
         & compat\vcbuild\vcpkg_copy_dlls.bat release
         if (!$?) { exit(1) }
         & git-sdk-64-minimal\usr\bin\bash.exe -lc @"
-          mkdir -p artifacts &&
-          eval \"`$(make -n artifacts-tar INCLUDE_DLLS_IN_ARTIFACTS=YesPlease ARTIFACTS_DIRECTORY=artifacts 2>&1 | grep ^tar)\"
-        "@
-    - name: upload build artifacts
-      uses: actions/upload-artifact@v1
-      with:
-        name: vs-artifacts
-        path: artifacts
-  vs-test:
-    runs-on: windows-latest
-    needs: [vs-build, windows-build]
-    strategy:
-      matrix:
-        nr: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
-    steps:
-    - uses: actions/checkout@v1
-    - name: download git-sdk-64-minimal
-      uses: actions/download-artifact@v1
-      with:
-        name: git-sdk-64-minimal
-        path: ${{github.workspace}}/git-sdk-64-minimal/
-    - name: download build artifacts
-      uses: actions/download-artifact@v1
-      with:
-        name: vs-artifacts
-        path: ${{github.workspace}}
-    - name: extract build artifacts
-      shell: bash
-      run: tar xf artifacts.tar.gz
-    - name: test (parallel)
-      shell: powershell
-      env:
-        MSYSTEM: MINGW64
-        NO_SVN_TESTS: 1
-        GIT_TEST_SKIP_REBASE_P: 1
-      run: |
-        & .\git-sdk-64-minimal\usr\bin\bash.exe -lc @"
-          # Let Git ignore the SDK and the test-cache
-          printf '%s\n' /git-sdk-64-minimal/ /test-cache/ >>.git/info/exclude
-
-          cd t &&
-          PATH=\"`$PWD/helper:`$PATH\" &&
-          test-tool.exe run-command testsuite --jobs=10 -V -x --write-junit-xml \
-                  `$(test-tool.exe path-utils slice-tests \
-                          ${{matrix.nr}} 10 t[0-9]*.sh)
+          make -C t DEFAULT_TEST_TARGET=prove GIT_TEST_OPTS=\"--verbose-log -x --write-junit-xml\"
         "@
   regular:
     strategy:
       matrix:
         vector:
-          - jobname: linux-clang
-            cc: clang
-            pool: ubuntu-latest
-          - jobname: linux-gcc
-            cc: gcc
-            pool: ubuntu-latest
           - jobname: osx-clang
             cc: clang
             pool: macos-latest
           - jobname: osx-gcc
             cc: gcc
             pool: macos-latest
-          - jobname: GETTEXT_POISON
-            cc: gcc
-            pool: ubuntu-latest
     env:
       CC: ${{matrix.vector.cc}}
       jobname: ${{matrix.vector.jobname}}
@@ -223,6 +121,7 @@ jobs:
     - uses: actions/checkout@v1
     - run: ci/install-dependencies.sh
     - run: ci/run-build-and-tests.sh
+      timeout-minutes: 5
     - run: ci/print-test-failures.sh
       if: failure()
     - name: Upload failed tests' directories
@@ -231,43 +130,3 @@ jobs:
       with:
         name: failed-tests-${{matrix.vector.jobname}}
         path: ${{env.FAILED_TEST_ARTIFACTS}}
-  dockerized:
-    strategy:
-      matrix:
-        vector:
-        - jobname: linux-musl
-          image: alpine
-        - jobname: Linux32
-          image: daald/ubuntu32:xenial
-    env:
-      jobname: ${{matrix.vector.jobname}}
-    runs-on: ubuntu-latest
-    container: ${{matrix.vector.image}}
-    steps:
-    - uses: actions/checkout@v1
-    - run: ci/install-docker-dependencies.sh
-    - run: ci/run-build-and-tests.sh
-    - run: ci/print-test-failures.sh
-      if: failure()
-    - name: Upload failed tests' directories
-      if: failure() && env.FAILED_TEST_ARTIFACTS != ''
-      uses: actions/upload-artifact@v1
-      with:
-        name: failed-tests-${{matrix.vector.jobname}}
-        path: ${{env.FAILED_TEST_ARTIFACTS}}
-  static-analysis:
-    env:
-      jobname: StaticAnalysis
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v1
-    - run: ci/install-dependencies.sh
-    - run: ci/run-static-analysis.sh
-  documentation:
-    env:
-      jobname: Documentation
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v1
-    - run: ci/install-dependencies.sh
-    - run: ci/test-documentation.sh
